[package]
name = "websocket-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.1", features = ["full"] }
ed25519-dalek = "=2.1.1"

tokio-tungstenite = "0.24" 
prost = "0.10"
futures = "0.3"
futures-util = "0.3"
rand = "0.8.5"
hex = "0.4"
sha2 = "0.9"
env_logger = "0.9"

[build-dependencies]
prost-build = "0.10"
